--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 *.fastq.gz
 *.fq.gz
 .snakemake/
+rarefaction_dts/config.yaml*
+*.jf
+*.histo
+temp.sh
+*.png
+*_model.txt
+*_progress.txt
+*_summary.txt
+*.gif
+*.pdf
+*.summary_table.tsv
+*~
