--- a/analyses_kmer/Snakefile
+++ b/analyses_kmer/Snakefile
@@ -12,14 +12,19 @@ rule all:
         expand("output/{sample}_k{thisk}.freqxcov.pdf", sample = config["sample"], thisk = target_kmers),
         expand("output/{sample}_k{thisk}_linear_plot.png", sample = config["sample"], thisk = target_kmers),
         expand("output/{sample}_k{thisk}_summary.txt", sample = config["sample"], thisk = target_kmers),
+        expand("fastqc/{sample}_all_R1_fastqc.html", sample = config["sample"]),
+        expand("fastqc/{sample}_all_R2_fastqc.html", sample = config["sample"]),
         "output/genome_size_report.tsv"
 
 rule concat_reads:
     input:
         reads = lambda wildcards: [f"{config['base_read_dir']}{x}" for x in config["sample"][wildcards.sample]["reads"]]
     output:
-        R1 = temporary("reads/{sample}_all_R1.fastq"),
-        R2 = temporary("reads/{sample}_all_R2.fastq")
+        #R1 = temporary("reads/{sample}_all_R1.fastq"),
+        #R2 = temporary("reads/{sample}_all_R2.fastq")
+        R1 = "reads/{sample}_all_R1.fastq",
+        R2 = "reads/{sample}_all_R2.fastq"
+    params:
     params:
         sample = lambda wildcards: wildcards.sample
     shell:
@@ -27,6 +32,23 @@ rule concat_reads:
         zcat {input.reads}/*R1*.fastq.gz > {output.R1}
         zcat {input.reads}/*R2*.fastq.gz > {output.R2}
         """
+
+rule fastqc:
+    input:
+        R1 = "reads/{sample}_all_R1.fastq",
+        R2 = "reads/{sample}_all_R2.fastq"
+    output:
+        html_R1 = "fastqc/{sample}_all_R1_fastqc.html",
+        zip_R1 = "fastqc/{sample}_all_R1_fastqc.zip",
+        html_R2 = "fastqc/{sample}_all_R2_fastqc.html",
+        zip_R2 = "fastqc/{sample}_all_R2_fastqc.zip"
+    params:
+        outdir = "fastqc"
+    shell:
+        """
+        fastqc -o {params.outdir} {input.R1} {input.R2}
+        """
+
 
 rule trim_reads:
     input:
@@ -56,6 +78,8 @@ rule trim_reads:
 
 rule count_reads:
     input:
+        R1 = "reads/{sample}_all_R1.fastq",
+        R2 = "reads/{sample}_all_R2.fastq",
         R1_paired   = "reads/{sample}_trimmed_paired_R1.fastq",
         R1_unpaired = "reads/{sample}_trimmed_unpaired_R1.fastq",
         R2_paired   = "reads/{sample}_trimmed_paired_R2.fastq",
@@ -66,10 +90,22 @@ rule count_reads:
         sample = lambda wildcards: wildcards.sample
     shell:
         """
-        cat {input.R1_paired} {input.R1_unpaired} {input.R2_paired} {input.R2_unpaired} | \
-          awk 'END {{print NR/4}}' > \
-          {output.read_count}
+        num_lines_raw=$(cat {input.R1} {input.R2} | wc -l)
+        num_reads_raw=$(($num_lines_raw / 4))
+
+        num_nucleotides_raw=$(cat {input.R1} {input.R2} | awk '{{if(NR%4==2) sum+=length($0)}} END {{print sum}}' )
+
+        num_lines_trimmed=$(cat {input.R1_paired} {input.R1_unpaired} {input.R2_paired} {input.R2_unpaired} | wc -l)
+        num_reads_trimmed=$(($num_lines_trimmed / 4))
+
+        num_nucleotides_trimmed=$(cat {input.R1_paired} {input.R1_unpaired} {input.R2_paired} {input.R2_unpaired} | awk '{{if(NR%4==2) sum+=length($0)}} END {{print sum}}' )
+
+        echo "reads_raw\t$num_reads_raw" > {output.read_count}
+        echo "nucleotides_raw\t$num_nucleotides_raw" >> {output.read_count}
+        echo "reads_trimmed\t$num_reads_trimmed" >> {output.read_count}
+        echo "nucleotides_trimmed\t$num_nucleotides_trimmed" >> {output.read_count}
         """
+
 
 rule generate_spectrum:
     input:
