--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@
 validation.txt
 *.peaks
 
+TruSeq3-PE.fa
+
 analyses_kmer/output/
 analyses_kmer/output_old/
 analyses_kmer/logs/
 analyses_kmer/logs_old/
 analyses_kmer/reads/
+analyses_kmer/fastqc/
 analyses_kmer/snake.txt
 
