--- a/analyses_sharkmer/Snakefile
+++ b/analyses_sharkmer/Snakefile
@@ -22,26 +22,68 @@ rule all:
         expand("output/{sample}_k{thisk}.sharkmer_view_genome_size.html", sample = config["sample"], thisk = target_kmers),
         "output/genome_size_report.tsv"
 
-rule concat_reads:
+
+rule process_and_count_reads:
     input:
         reads = lambda wildcards: [f"{config['base_read_dir']}{x}" for x in config["sample"][wildcards.sample]["reads"]]
-    output:    
-        reads = "data/{sample}.fastq",
+    output:
+        R1 = temp("data/{sample}_all_R1.fastq"),
+        R2 = temp("data/{sample}_all_R2.fastq"),
+        R1_paired   = temp("data/{sample}_trimmed_paired_R1.fastq"),
+        R1_unpaired = temp("data/{sample}_trimmed_unpaired_R1.fastq"),
+        R2_paired   = temp("data/{sample}_trimmed_paired_R2.fastq"),
+        R2_unpaired = temp("data/{sample}_trimmed_unpaired_R2.fastq"),
+        read_count = "output/{sample}.count",
+        reads = "data/{sample}.fastq"
     params:
         sample = lambda wildcards: wildcards.sample
+    threads: workflow.cores
+    log: "logs/trimmomatic/trimmomatic_{sample}.log"
     shell:
         """
-        zcat {input.reads}/*.fastq.gz > {output.reads}
-        """
+        
+        # Multiple operations are combined into a single rule here to minimize the number of files on disk at any point in time.
+        
+        # Concatenate reads
+        zcat {input.reads}/*R1*.fastq.gz > {output.R1}
+        zcat {input.reads}/*R2*.fastq.gz > {output.R2}
 
-rule generate_read_count:
-    input:
-        reads = "data/{sample}.fastq"
-    output:
-        read_count = "output/{sample}.count",
-    shell:
-        """
-        awk 'END {{print NR/4}}' {input.reads} > {output.read_count}
+        # Trim reads
+        echo ">PrefixPE/1\nTACACTCTTTCCCTACACGACGCTCTTCCGATCT\n>PrefixPE/2\nGTGACTGGAGTTCAGACGTGTGCTCTTCCGATCT" > TruSeq3-PE.fa
+        trimmomatic PE \
+          -threads {threads} \
+          {output.R1} \
+          {output.R2} \
+          {output.R1_paired} \
+          {output.R1_unpaired} \
+          {output.R2_paired} \
+          {output.R2_unpaired} \
+          ILLUMINACLIP:TruSeq3-PE.fa:2:30:10:2:True LEADING:15 TRAILING:15 MINLEN:50 2> {log}
+        
+        cat {output.R1_paired} {output.R2_paired} > {output.reads}
+        
+        # Count reads
+        sum=0
+        num_lines_raw=$(cat {output.R1} | wc -l)
+        num_reads_raw=$(($num_lines_raw / 4))
+        num_nucleotides_raw=$(cat {output.R1} {output.R2} | awk '{{if(NR%4==2) sum+=length($0)}} END {{print sum}}' )
+
+        sum=0
+        num_lines_trimmed=$(cat {output.R1_paired} | wc -l)
+        num_reads_trimmed=$(($num_lines_trimmed / 4))
+        num_nucleotides_trimmed=$(cat {output.R1_paired} {output.R2_paired} | awk '{{if(NR%4==2) sum+=length($0)}} END {{print sum}}' )
+
+        sum=0
+        num_lines_unpaired_trimmed=$(cat {output.R1_unpaired} {output.R2_unpaired} | wc -l)
+        num_reads_unpaired_trimmed=$(($num_lines_unpaired_trimmed / 4))
+        num_nucleotides_unpaired_trimmed=$(cat {output.R1_unpaired} {output.R2_unpaired} | awk '{{if(NR%4==2) sum+=length($0)}} END {{print sum}}' )
+
+        echo "reads_pairs_raw\t$num_reads_raw" > {output.read_count}
+        echo "nucleotides_raw\t$num_nucleotides_raw" >> {output.read_count}
+        echo "reads_pairs_trimmed\t$num_reads_trimmed" >> {output.read_count}
+        echo "nucleotides_trimmed\t$num_nucleotides_trimmed" >> {output.read_count}
+        echo "reads_unpaired_trimmed\t$num_reads_unpaired_trimmed" >> {output.read_count}
+        echo "nucleotides_unpaired_trimmed\t$num_nucleotides_unpaired_trimmed" >> {output.read_count}
         """
 
 rule generate_sharkmer_spectrum:
